--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-<html>
+---
+layout: home
+background: pantingpanda_bandcamp_bg.png
+---
