--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 background: pantingpanda_bandcamp_bg.png
-title: "WELCOME TO MY WORLD OF MUSIC"
+intro: "WELCOME TO MY WORLD OF MUSIC"
 ---
