Improve Design for Home Page | Added New Bg | Added Better Text | Changed Postion and background of Nav

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: home
-background: pantingpanda_bandcamp_bg.png
+background: background.jpeg
 intro: "WELCOME TO MY WORLD OF MUSIC"
+bandcamp: "https://pantingpanda.bandcamp.com/"
+spotify: ""
+youtube: ""
+vinyl: ""
 ---
