jumbotron bg code added

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: "Blog"
 bg-color: #FFD9D9
 bg-image: cherryblossom-bg.png
 ---
-<div class="jumbotron">
+<div class="jumbotron" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')">
     <h1 id="site_header">{{ page.title }}</h1>
 </div>
 <div id="music_grid_wrapper">
