fixed bg-color syntax on blog.html

--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,9 @@
 ---
 layout: blogs
 title: "Blog"
-bg-color: #FFD9D9
+bg-color: "#FFD9D9"
 bg-image: cherryblossom-bg.png
+jumbo-bg:""
 ---
 <div class="jumbotron" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')">
     <h1 id="site_header">{{ page.title }}</h1>
