--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 layout: default
 title: "Blog"
 bg-color: "#FFD9D9"
+canonical_url: 'https://github.com/jekyll/jekyll-seo-tag/'
 ---
 <div class="jumbotron" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')">
     <h1 id="site_header">{{ page.title }}</h1>
@@ -9,7 +10,7 @@ bg-color: "#FFD9D9"
 <div id="music_grid_wrapper">
     <div class="grid">
         <div class="grid-sizer"></div>
-        {% for blogs in site.categories.blogs %}      
+        {% for blogs in site.categories.blogs %}
         <div class="grid-item">
             <div class="post-link-container" style="background-color:{{ blogs.background }}">
                 <a class="grid_link" href="{{ blogs.url | relative_url }}">
@@ -21,6 +22,6 @@ bg-color: "#FFD9D9"
                 </a>
             </div>
         </div>
-        {% endfor %} 
+        {% endfor %}
     </div>
 </div>
