--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Blog"
 bg-color: "#FFD9D9"
-canonical_url: 'https://github.com/jekyll/jekyll-seo-tag/'
+canonical_url: 'http://pantingpanda.band/'
 ---
 <div class="jumbotron" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')">
     <h1 id="site_header">{{ page.title }}</h1>
