--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@ layout: default
 title: "Music"
 bg-color: "#fff"
 bg-image:
-canonical_url: 'https://github.com/jekyll/jekyll-seo-tag/'
+canonical_url: 'http://pantingpanda.band/'
 ---
 <div class="jumbotron" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')">
     <h1 id="site_header">{{ page.title }}</h1>
