Fixed Reponsive Error

--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Music"
-bg-color: "#fff"
+bg-color: '#fff'
 bg-image:
 canonical_url: 'http://pantingpanda.band/'
 ---
