added about.html page layout and about.md

--- a/music.html
+++ b/music.html
@@ -5,7 +5,7 @@ bg-color: '#fff'
 bg-image:
 canonical_url: 'http://pantingpanda.band/'
 ---
-<div class="jumbotron" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')">
+<div class="jumbotron" style="background:{{ page.jumbo-bg }}')">
     <h1 id="site_header">{{ page.title }}</h1>
 </div>
 <div id="music_grid_wrapper">
