--- a/about.html
+++ b/about.html
@@ -1,17 +1,15 @@
 ---
 layout: default
+title: "About"
+comments: false
 ---
 <article>
     <div class="music_post_wrapper">
         <h1 class="display-3">{{ page.title }}</h1>
         <hr>
-        <a href="{{ page.spotify }}"><i class="fa fa-spotify" aria-hidden="true"></i></a>
-        <a href="{{ page.bandcamp }}"><i class="fa fa-bandcamp" aria-hidden="true"></i></a>
-        <a href="{{ page.itunes }}"><i class="fa fa-music" aria-hidden="true"></i></a>
         <div class="row">
             <div class="col-md-8, col-sm-12, col-lg-10">
                 <div class="post_content_wrapper">
-                    <img class="img-responsive" src="{{ site.url}}/assets/img/{{ page.thumbnail }}">
                     {{ content }}
                 </div>
             </div>
