--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,9 @@ layout: default
 title: "Blog"
 bg-color: "#FFD9D9"
 canonical_url: 'http://pantingpanda.band/'
+jumbo-bg: "transparent"
 ---
-<div class="jumbotron" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')" style="background: url('{{ site.url}}/assets/img/{{ page.jumbo-bg }}')">
+<div class="jumbotron" style="background: {{ page.jumbo-bg }}">
     <h1 id="site_header">{{ page.title }}</h1>
 </div>
 <div id="music_grid_wrapper">
