--- a/music.html
+++ b/music.html
@@ -15,7 +15,7 @@ canonical_url: 'http://pantingpanda.band/'
         <div class="col-md-4">
             <a class="grid_link" href="{{ audio.url | relative_url }}">
                 <img class="music_thumbnail img-responsive" src="{{ site.url}}/assets/img/{{ audio.thumbnail }}">
-                 <h3 class="grid_post_title">{{ audio.title }}</h3>
+                 <h3 class="grid_post_title"><small>{{ audio.release_type }}</small> <br> {{ audio.title }} </h3>
             </a>
         </div>
         {% endfor %}
