change link to imgs

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@ jumbo-bg: "transparent"
         <div class="grid-item">
             <div class="post-link-container" style="background-color:{{ blogs.background }}">
                 <a class="grid_link" href="{{ blogs.url | relative_url }}">
-                    <img class="music_thumbnail img-responsive" src="assets/img/{{ blogs.thumbnail }}">
+                    <img class="music_thumbnail img-responsive" src="{{ blogs.thumbnail }}">
                      <h3 class="blog_grid_post_title">{{ blogs.title }}</h3>
                      <div class="post_content_wrapper">
                          {{ blogs.content | truncate: 200 }}
