added some changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-background: background.jpeg
-intro: "WELCOME TO MY WORLD OF MUSIC"
-bandcamp: "https://pantingpanda.bandcamp.com/"
+background: ohw.jpeg
+intro: "WELCOME!"
+bandcamp: "https://pantingpanda.bandcamp.com/album/one-hell-of-a-week-ost"
 spotify: ""
 youtube: ""
 vinyl: ""
