--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ canonical_url: 'http://pantingpanda.band/'
 jumbo-bg: "transparent"
 ---
 <div class="jumbotron" style="background: {{ page.jumbo-bg }}">
-    <h1 id="site_header">{{ page.title }}</h1>
+  <h1 id="site_header">{{ page.title }}</h1>
 </div>
 <div id="music_grid_wrapper">
     <div class="grid">
@@ -15,8 +15,8 @@ jumbo-bg: "transparent"
         <div class="grid-item">
             <div class="post-link-container" style="background-color:{{ blogs.background }}">
                 <a class="grid_link" href="{{ blogs.url | relative_url }}">
-                    <img class="music_thumbnail img-responsive" src="assets/img/{{ blogs.thumbnail }}">
-                     <h3 class="blog_grid_post_title">{{ blogs.title }}</h3>
+                    <img class="music_thumbnail img-responsive" src="{{ blogs.thumbnail }}">
+                     <h4 class="blog_grid_post_title">{{ blogs.title }}</h4>
                      <div class="post_content_wrapper">
                          {{ blogs.content | truncate: 200 }}
                      </div>
